src/app.css
@import 'tailwindcss';

@font-face {
  font-family: 'Ubuntu Sans';
  font-weight: 400;
  font-style: normal;
  font-display: swap;
  src: url('/fonts/ubuntu-sans-400.woff2') format('woff2');
}

@font-face {
  font-family: 'Ubuntu Sans';
  font-weight: 400;
  font-style: italic;
  font-display: swap;
  src: url('/fonts/ubuntu-sans-400-italic.woff2') format('woff2');
}

@font-face {
  font-family: 'Ubuntu Sans';
  font-weight: 600;
  font-style: normal;
  font-display: swap;
  src: url('/fonts/ubuntu-sans-600.woff2') format('woff2');
}

@font-face {
  font-family: 'Ubuntu Sans Mono';
  font-weight: 500;
  font-style: normal;
  font-display: swap;
  src: url('/fonts/ubuntu-sans-mono-500.woff2') format('woff2');
}

@font-face {
  font-family: 'Ubuntu Sans Mono';
  font-weight: 600;
  font-style: normal;
  font-display: swap;
  src: url('/fonts/ubuntu-sans-mono-600.woff2') format('woff2');
}

@utility badge-transition {
  transition:
    scale 300ms ease-in-out,
    filter 600ms ease-in-out;
}

@utility drop-shine {
  filter: drop-shadow(0px 0px 10px rgba(255, 255, 255, 0.05));

  &:hover {
    filter: drop-shadow(0px 0px 25px rgba(255, 255, 255, 0.15));
  }
}

@utility shiny {
  box-shadow: 4px 4px 20px 0px color-mix(in oklab, var(--color-white) 5%, transparent);
}

@utility dark-x-gradient {
  background-image: linear-gradient(90deg, #272f3a 0%, #2a3646 100%);
}

@utility dark-y-gradient {
  background-image: linear-gradient(180deg, #13171c 0%, #202746 100%);
}

@theme {
  --breakpoint-sm: 36rem;
  --breakpoint-md: 48rem;
  --breakpoint-lg: 64rem;
  --breakpoint-xl: 80rem;

  --font-primary: 'Ubuntu Sans Mono', monospace;
  --font-secondary: 'Ubuntu Sans', sans-serif;

  --color-black: #090e19;
  --color-primary: #02abb2;
  --color-secondary: #5e79d1;

  --color-graph-level-4: #39d353;
  --color-graph-level-3: #26a641;
  --color-graph-level-2: #006d32;
  --color-graph-level-1: #0e4429;
  --color-graph-level-0: #29323d;

  --text-title: clamp(2.25rem, 5vw, 4rem);
  --text-title--line-height: 1.2;
  --text-subtitle: clamp(0.875rem, 2vw, 1.5rem);
  --text-subtitle--line-height: 1.2;
}

@layer components {
  .btn {
    @apply cursor-pointer px-12 py-4 font-secondary text-lg leading-none font-semibold text-white;
    @apply rounded-full border-4 border-primary transition-[scale] duration-250 ease-in-out;
    @apply hover:scale-105 active:scale-100;

    &.primary {
      @apply bg-primary;
    }
  }

  .text.featured {
    @apply inline-block bg-linear-to-r from-primary to-secondary bg-clip-text text-transparent;
  }

  .link.featured {
    @apply relative inline-block leading-tight font-semibold text-primary;
    @apply before:bg-linear-to-r before:from-primary before:to-secondary;
    @apply before:absolute before:bottom-0 before:left-0 before:h-0.5 before:w-0;
    @apply before:transition-[width] before:duration-300 before:ease-[ease] before:content-[''] hover:before:w-full;
  }
}

